<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="fav_button">Кнопка избранного</string>
    <string name="back_button">Кнопка назад</string>
    <string name="compare_button">Кнопка сравнения</string>
    <string name="specifications">Характеристики</string>
    <string name="year_of_release">Год выпуска: %1$s</string>
    <string name="car_details_mileage">Пробег: %1$s км</string>
    <string name="car_details_body_type">Тип кузова: %1$s</string>
    <string name="car_details_color">Цвет: %1$s</string>
    <string name="car_details_engine">Двигатель: %1$s л / %2$s л.с. / %3$s</string>
    <string name="car_details_transmission">Коробка передач: %1$s</string>
    <string name="car_details_drivetrain">Привод: %1$s</string>
    <string name="car_details_wheel">Руль: %1$s</string>
    <string name="car_details_condition">Состояние: %1$s</string>
    <string name="car_details_owners">Количество владельцев: %1$s</string>
    <string name="car_details_vin">VIN: %1$s</string>
    <string name="car_details_ownership_period">Период владения: %1$s</string>
    <string name="seller_s_comment">Комментарий продавца</string>
    <string name="car_details_car_price">%1$,d ₽</string>
    <string name="car_details_brand_model_year">%1$s %2$s, %3$d</string>
    <string name="delete_ad_dialog_title">Удалить объявление?</string>
    <string name="delete_ad_dialog_message">Вы уверены, что хотите удалить это объявление?</string>
    <string name="delete_ad_dialog_positive_button">Да</string>
    <string name="delete_ad_dialog_negative_button">Отмена</string>
    <string name="pls_login_to_fav">Пожалуйста, войдите в систему, чтобы добавлять автомобили в избранное</string>
    <string name="pls_login_to_comp">Пожалуйста, войдите в систему, чтобы добавлять автомобили в список сравнения</string>
    <string name="ad_deleted">Объявление удалено</string>
</resources>
