<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingBottom="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/car_details_price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/car_details_car_price"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="200 000 $" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/creation_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2025-03-29" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/car_details_brand_model_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/car_details_brand_model_year"
        android:textSize="24sp"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_details_price_tv"
        tools:text="Audi RS 6, 2020" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/specifications_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/specifications"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_details_brand_model_year" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/car_details_year_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/year_of_release"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/specifications_tv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/car_details_mileage_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/car_details_mileage"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_details_year_tv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/car_details_body_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/car_details_body_type"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_details_mileage_tv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/car_details_color_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/car_details_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_details_body_type_tv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/car_details_engine_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/car_details_engine"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_details_color_tv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/car_details_transmission_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/car_details_transmission"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_details_engine_tv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/car_details_drivetrain_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/car_details_drivetrain"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_details_transmission_tv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/car_details_wheel_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/car_details_wheel"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_details_drivetrain_tv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/car_details_condition_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/car_details_condition"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_details_wheel_tv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/car_details_owners_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/car_details_owners"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_details_condition_tv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/car_details_ownership_period_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/car_details_ownership_period"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_details_owners_tv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/car_details_vin_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/car_details_vin"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_details_ownership_period_tv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/car_details_seller_s_comment_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/seller_s_comment"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_details_vin_tv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/car_details_seller_s_comment_tv_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_details_seller_s_comment_tv"
        tools:text="The Audi RS6 is a high-performance sports station Wagon (Estate) with a twin-turbo V8 engine, delivering an exhilarating driving experience." />

</androidx.constraintlayout.widget.ConstraintLayout>