<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/car_details_tool_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_theme_primary">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:background="@drawable/back_icon"
        android:contentDescription="@string/back_button" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fav_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:background="@drawable/fav_icon"
        android:contentDescription="@string/fav_button" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/edit_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:background="@drawable/compare_plus_icon"
        android:contentDescription="@string/compare_button" />

</com.google.android.material.appbar.MaterialToolbar>